chore: コメントとissueを追加

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
     "recommendations": [
         "github.copilot",
-        "golang.go"
+        "golang.go",
+        "github.vscode-pull-request-github"
     ]
 }
