--- a/downloadPage/package.json
+++ b/downloadPage/package.json
@@ -1,5 +1,12 @@
 {
   "dependencies": {
     "puppeteer": "^21.5.0"
+  },
+  "devDependencies": {
+    "@types/puppeteer": "^7.0.4"
+  },
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/main.js"
   }
 }
